<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CINEMAPP</string>

    <string name="login_email">SIGN IN WITH EMAIL</string>
    <string name="login_google">SIGN IN WITH GOOGLE</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_owner_button">LOGIN</string>

    <string name="login_register_button">REGISTER</string>
    <string name="owner_register">You don\'t have an account? Register here</string>
    <string name="email_hint">Email</string>
    <string name="company_hint">Company</string>
    <string name="confirm_button">CONFIRM</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="recovery_hint">Recovery code</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="owner_recover">FORGOT YOUR PASSWORD?</string>
    <string name="recover_code_hint">Recovery code</string>
    <string name="recover_password_hint">New password</string>
    <string name="recover_new_password_hint">Confirm password</string>
    <string name="owner_home_cinemas">My Theaters</string>
    <string name="create_cinema_title">Create Cinema</string>
    <string name="edit_cinema_title">Edit Cinema</string>
    <string name="cinema_form_name_hint">Cinema name</string>
    <string name="cinema_form_address_hint">Address</string>
    <string name="cinema_form_address_number_hint">St number</string>
    <string name="cinema_form_country_hint">Country</string>
    <string name="cinema_form_province_hint">Province</string>
    <string name="cinema_form_locality_hint">Locality</string>
    <string name="cinema_form_neighbourhood_hint">Neighbourhood</string>
    <string name="cinema_form_latitude_hint">Latitude</string>
    <string name="cinema_form_longitude_hint">Longitude</string>
    <string name="cinema_form_price_hint">Price</string>
    <string name="cinema_form_enabled_hint">Cinema enabled</string>
    <string name="cinema_dialog_text">Delete cinema</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="home_empty_text">You don\'t have any cinemas created</string>
    <string name="home_cinema_empty_button">Create cinema</string>

    <string name="owner_home_rooms">My Cinema Rooms</string>
    <string name="home_room_empty_button">Create now</string>
    <string name="home_room_empty_text">You don\'t have any rooms created</string>
    <string name="owner_home_movies">Movies</string>
    <string name="create_room_title">Create Room</string>
    <string name="cinema_room_form_name_hint">Room name</string>
    <string name="cinema_room_form_row_hint">Row</string>
    <string name="cinema_room_form_seat_hint">Seats in row</string>
    <string name="cinema_room_form_enabled_hint">Room enabled</string>
    <string name="edit_cinema_room_title">Edit Room</string>
    <string name="cinema_home_empty_movies">You don\'t have any movies added</string>
    <string name="cinema_home_empty_movies_button">Add now</string>
    <string name="movies_own_title">My Movies</string>
    <string name="movies_available_soon">Coming Soon</string>
    <string name="movies_available_showing">Billboard</string>
    <string name="discard_button_text">Discard</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales a mi eu consequat. Praesent ante enim, maximus vel purus vel, consequat auctor eros. Pellentesque sodales, sem sodales fringilla sodales, nisl nulla feugiat magna, sed tincidunt erat nunc faucibus magna. Nunc in orci mattis, molestie orci ut, vehicula est. Mauris mollis pulvinar diam eu lobortis. Phasellus consequat tempor nibh, sed ornare mauris pulvinar non. Praesent nec placerat diam, at egestas elit.</string>
    <string name="movie_duration">Duration</string>
    <string name="movie_year">Year</string>
    <string name="movie_category">Category</string>
    <string name="movie_director">Director</string>
    <string name="movie_cast">Cast</string>
    <string name="screening_empty_text">No screening time added</string>
    <string name="select_screening_time">Select time</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="dubbed">Dubbed</string>
    <string name="subtitled">Subtitled</string>
    <string name="cinema_movies_amount">%d movies</string>
    <string name="cinema_rooms_amount">%d rooms</string>
    <string name="otp_hint">Code</string>
    <string name="validate_title">ENTER THE CODE SENT TO YOU EMAIL</string>
    <string name="validate_description">Keep in mind that the duration of the code sent to the email is 10 minutes, if this time elapses you must register the account again</string>
    <string name="validate_dialog_success">Account created</string>
    <string name="dialog_error">An error has occurred</string>
    <string name="select_screening_format">Select format</string>
    <string name="room_movie_quantity">%d movies</string>
    <string name="movies">Movies</string>
    <string name="profile">Profile</string>
    <string name="config">Config</string>
    <string name="personal_data">Personal Data</string>
    <string name="user_name_hint">Name</string>
    <string name="user_email_hint">Email</string>
    <string name="user_company_hint">Company</string>
    <string name="config_title">By unsubscribing your account, all reservations and created theaters will be permanently lost</string>
    <string name="config_client_title">By unsubscribing your account, all reservations and comments will be permanently lost</string>
    <string name="logout">Logout</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="success">Success</string>
    <string name="error">An Error has occurred</string>
    <string name="session_closed">Logged out successfully</string>
    <string name="unsubscribed">Account closed</string>
    <string name="unsubscribe_confirm">Are you sure you want to close your account?</string>
    <string name="invalid_email_password">Incorrect email, password combination</string>
    <string name="password_not_match">Password does not match</string>
    <string name="save_button">Save</string>
    <string name="skip_button">Skip</string>
    <string name="reservation">Reservation</string>
    <string name="start">Home</string>
    <string name="movie_details">Details</string>
    <string name="movie_functions">Screenings</string>
    <string name="client_reservations_title">My Reservations</string>
    <string name="reservations_empty">You did not book any screenings yet</string>
    <string name="reservations_empty_button">Book Now</string>
    <string name="client_home_movies">Now in Cinemas</string>
    <string name="client_home_movie_empty">Oops… It looks like there aren\'t any movies in theaters nearby right now</string>
    <string name="no_location">Please give location permissions to search for movies close to you</string>
    <string name="filter_title">Filters</string>
    <string name="distance_hint">Distance</string>
    <string name="genre_hint">Genre</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="drama">Drama</string>
    <string name="fantasy">Fantasy</string>
    <string name="horror">Horror</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="scifi">Sci-Fi</string>
    <string name="thriller">Thriller</string>
    <string name="score">Score</string>
    <string name="select_cinema">Select a Cinema</string>
    <string name="search_hint">Search</string>
    <string name="cinema_hint">Cinemas</string>
    <string name="movie_score">Score</string>
    <string name="comment">Comment</string>
    <string name="select_cinema_error">Select a cinema to see functions</string>
    <string name="comment_title">Leave your comment here</string>
    <string name="title_hint">Title</string>
    <string name="body_hint">Comment</string>
    <string name="share_using">Share movie</string>
    <string name="share_text">Get the app to see this movie with me!</string>
    <string name="sort_time">Sort time</string>
    <string name="hour">Hour</string>
    <string name="price">Price</string>
    <string name="format">Format</string>
    <string name="seats">Seats</string>
    <string name="original">English</string>
    <string name="select_date">Select Screening day</string>
    <string name="tickets_title">Number of tickets</string>
    <string name="ticket_hint">Amount</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="chosen">Chosen</string>
    <string name="book_confirm">Book Tickets</string>
    <string name="tickets_zero">You have to select a number bigger than 0</string>
    <string name="not_enough_tickets">There are not enough seats available in this screening</string>
    <string name="missing_seats">You still have missing seats to select</string>
    <string name="reservation_title">Your Screening</string>
    <string name="cinema">Cinema</string>
    <string name="date">Date</string>
    <string name="code">Reservation Code</string>
    <string name="row">R</string>
</resources>