<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action"
        android:title="@string/action" />
    <item android:id="@+id/adventure"
        android:title="@string/adventure" />
    <item android:id="@+id/comedy"
        android:title="@string/comedy" />
    <item android:id="@+id/crime"
        android:title="@string/crime" />
    <item android:id="@+id/drama"
        android:title="@string/drama" />
    <item android:id="@+id/fantasy"
        android:title="@string/fantasy" />
    <item android:id="@+id/horror"
        android:title="@string/horror" />
    <item android:id="@+id/mystery"
        android:title="@string/mystery" />
    <item android:id="@+id/romance"
        android:title="@string/romance" />
    <item android:id="@+id/scifi"
        android:title="@string/scifi" />
    <item android:id="@+id/thriller"
        android:title="@string/thriller" />
</menu>